# SkeifCV

./: .gitignore  README.md  generate_previews.py  index.html  main.py  package-lock.json  package.json  pubspec.yaml  pyproject.toml  requirements.txt  run.sh
.dart_tool/: package_config.json  package_graph.json
.dart_tool/dartpad/: web_plugin_registrant.dart
.dart_tool/extension_discovery/: vs_code.json
.dart_tool/flutter_build/: dart_plugin_registrant.dart
android/app/: build.gradle.kts
app/: __init__.py  main.py
app/models/: cv_models.py
app/services/: pdf_generator.py  template_service.py
app/templates/: base.html  editor.html  index.html
assets/themes/: cv_themes.json
client/: package.json
client/src/: App.css  App.js
cv_generator/.dart_tool/: package_config.json  package_graph.json
cv_generator/android/: local.properties
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: cv_data.dart  cv_theme.dart  education.dart  work_experience.dart
lib/providers/: cv_form_provider.dart
lib/screens/: cv_builder_screen.dart  cv_form_screen.dart  home_screen.dart  pdf_preview_screen.dart
lib/services/: pdf_generator.dart  theme_service.dart
lib/theme/: app_theme.dart
lib/widgets/: custom_expansion_tile.dart  (+1 more)
linux/: CMakeLists.txt
scripts/: auto_commit.sh  watch_on_save.sh
server/: package.json
src/: App.css  App.jsx  index.css
test/: cv_builder_screen_test.dart  cv_data_test.dart  theme_service_test.dart  widget_test.dart
web/: index.html
windows/: CMakeLists.txt
(+17 files in other folders)
