[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skeifcv"
version = "1.0.0"
description = "Free CV making app with modernised templates"
authors = [{name = "SkeifCV Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "jinja2==3.1.2",
    "python-multipart==0.0.6",
    "weasyprint==61.2",
    "pydantic==2.5.0",
    "aiofiles==23.2.1",
    "python-dotenv==1.0.0",
]

[project.urls]
Repository = "https://github.com/Chalebgwa/SkeifCV"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"